--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,5 @@
 .place__image {
-  grid-row: 2/4;
-  width: 460px;
-  height: 460px;
-  margin: 48px 0 0;
+  grid-row: 2/3;
+  max-width: 460px;
+  max-height: 460px;
 }
