--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,12 @@
 .place {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  width: 984px;
-  height: 660px;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   column-gap: 40px;
+  row-gap: 48px;
+  margin-top: 80px;
+}
+
+.place:first-child {
+  margin-top: 0;
 }
