--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
-  max-width: 1184px;
-  max-height: 740px;
+  min-width: 1184px;
+  min-height: 740px;
   display: flex;
   position: relative;
   margin: 92px 48px 0;
