--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,10 @@
 .cover__link {
+  display: block;
+  text-align: center;
+  height: 100%;
   text-decoration: none;
   color: #fff;
+  z-index: 2;
+  width: 100%;
 }
+
