--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,7 +6,9 @@
   position: absolute;
   bottom: 254px;
   left: 412px;
+  top: 429px;
   max-width: 360px;
   max-height: 66px;
-  margin: 32px 0 0;
+  margin: 0;
+  pointer-events: none;
 }
