--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,7 +4,20 @@
   text-align: center;
   z-index: 2;
   position: absolute;
-  margin: 245px 312px 0;
+  bottom: 343px;
+  top: 245px;
+  left: 312px;
+  right: 312px;
+  margin: 0;
+  pointer-events: none;
 }
 
-
+.cover__title a {
+  display: block;
+  text-align: center;
+  height: 100%;
+  text-decoration: none;
+  color: #fff;
+  z-index: 2;
+  width: 100%;
+}
