--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,5 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/container/container.css);
+@import url(../blocks/cover/__background/cover__background.css);
