--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,4 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/container/container.css);
 @import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/container/__link/container__link.css);
