--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,12 @@
 .cover__link {
-
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  display: flex;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  z-index: 2;
 }
 
