--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header {
-  width: 1184px;
-  height: 52px;
+  max-width: 1184px;
   margin: 28px 48px 0;
   display: flex;
   justify-content: space-between;
