--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -10,3 +10,10 @@
     margin: 48px 48px 0;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .lead {
+    max-width: 768px;
+    margin: 0;
+  }
+}
