--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,4 @@
 @import url(../blocks/container/container.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/container/__link/container__link.css);
+@import url(../blocks/footer/__links/footer__links.css);
