--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,5 +2,13 @@
   max-width: 1184px;
   max-height: 18px;
   display: flex;
+  justify-content: space-between;
   margin: 92px 48px 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+    margin: 94px 24px 24px;
+  }
 }
