--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 28px 24px 0;
+  }
+}
