--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,16 @@
   height: 429px;
   margin: 92px 442px 0 148px;
 }
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin: 92px 286px 0 48px;
+  }
+
+}
+@media screen and (max-width: 768px) {
+  .intro {
+    margin: 88px 24px 0;
+  }
+
+}
