--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,3 +5,10 @@
   line-height: 14px;
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin-top: 8px;
+    margin-left: 24px;
+  }
+}
