--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -12,3 +12,11 @@
     gap: 14px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, 352px);
+    gap: 16px;
+    margin: 88px 24px 0;
+  }
+}
