--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,3 +9,10 @@
   margin-bottom: 26px;
 }
 
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
