--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,18 @@
   margin: 0;
   max-width: 460px;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__title {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .place__title {
+    max-width: 340px;
+    font-weight: 900;
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
