--- a/blocks/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/place/__website/__url-heading/place__website__url-heading.css
@@ -2,7 +2,15 @@
   color: #AAA;
   font-weight: normal;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 170%;
   letter-spacing: 2px;
   margin: 0 0 12px;
+}
+
+@media screen and (max-width: 768px) {
+  .place__website__url-heading {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+  }
 }
