--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -10,3 +10,15 @@
 .place:first-child {
   margin-top: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    column-gap: 28px;
+  }
+}
