--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,17 @@
 .places {
   margin: 92px 148px 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .places {
+    margin: 92px 48px 0;
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    margin: 88px 24px 0;
+    max-width: 984px;
+  }
+}
