--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
-  width: 690px;
-  height: 429px;
+  max-width: 690px;
+  max-height: 429px;
   margin: 92px 442px 0 148px;
 }
 
@@ -12,6 +12,7 @@
 }
 @media screen and (max-width: 768px) {
   .intro {
+    max-width: 720px;
     margin: 88px 24px 0;
   }
 
