--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,31 @@
 .cover__subtitle {
-  position: absolute;
-  left: 412px;
-  bottom: 245px;
   max-width: 360px;
+  z-index: 1;
+  margin: 32px 0 245px;
+  align-self: center;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 122%;
+  text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__subtitle {
+    margin: 32px 332px 195px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__subtitle {
+    margin: 32px 204px 115px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    margin: 16px 16px 33px;
+  }
 }
