--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,9 +4,26 @@
   font-size: 72px;
   line-height: 76px;
   text-align: center;
-  position: absolute;
-  top: 245px;
-  left: 312px;
-  margin: 0;
+  margin: 245px 312px 0;
+  z-index: 1;
 }
 
+@media screen and (max-width: 1024px) {
+  .cover__title {
+    margin: 192px 232px 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cover__title {
+    margin: 115px 104px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    margin: 33px 16px 0;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
