--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,15 +1,51 @@
 .cover {
-  width: 1184px;
-  height: 740px;
+  max-width: 1184px;
   display: flex;
   position: relative;
   margin: 92px 48px 0;
 }
 
+.cover__overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2A2C2F;
+  opacity: .3;
+  z-index: 0;
+}
+
+.cover__overlay:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2A2C2F;
+  opacity: .8;
+  z-index: 0;
+}
+
 @media screen and (max-width: 1024px) {
   .cover {
     max-width: 1024px;
-    margin: 0;
+    margin: 92px 0 0;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .cover {
+    max-width: 768px;
+    margin-top: 92px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    max-width: 320px;
+    margin-top: 66px;
+  }
+}
