--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,12 @@
   max-height: 16px;
   margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    margin-top: 48px;
+  }
+}
