--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,3 +10,13 @@
 .footer__link:first-child {
   margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .footer__link {
+    margin-top: 32px;
+    margin-left: 0;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
