--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,3 +12,11 @@
     margin: 94px 24px 24px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .footer {
+    flex-direction: column;
+    max-width: 186px;
+    margin: 64px 118px 24px 16px;
+  }
+}
