--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,5 +6,13 @@
   margin-bottom: 6px;
 }
 
-
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 20px;
+    margin-top: 14px;
+    margin-bottom: 8px;
+  }
+}
 
