--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,12 @@
 .intro__list {
-  margin-top: 33px;
-  margin-bottom: 0;
   font-weight: bold;
   font-size: 12px;
   line-height: 18px;
-  width: 690px;
-  height: 90px;
+  margin: 33px 0 0;
+}
+
+@media screen and (max-width: 320px) {
+  .intro__list {
+    margin-top: 34px;
+  }
 }
