--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro {
   max-width: 690px;
-  max-height: 429px;
   margin: 92px 442px 0 148px;
 }
 
@@ -14,6 +13,13 @@
   .intro {
     max-width: 720px;
     margin: 88px 24px 0;
+  }
+
+}
+@media screen and (max-width: 320px) {
+  .intro {
+    max-width: 288px;
+    margin: 64px 16px 0;
   }
 
 }
