--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -17,3 +17,13 @@
     margin: 32px 64px 0;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin: 16px 16px 0;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 125%;
+
+  }
+}
