--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-  font-size: 96px;
+  font-size: 6rem;
   line-height: 100px;
   text-align: center;
   font-weight: 900;
@@ -15,5 +15,14 @@
 @media screen and (max-width: 768px) {
   .lead__title {
     margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    margin: 0 16px;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 110%;
   }
 }
