--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,5 +14,16 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 163%;
+
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 163%;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
