--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -13,11 +13,23 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .place__title {
     max-width: 340px;
     font-weight: 900;
     font-size: 42px;
-    line-height: 46px;
+    line-height: 110%;
+
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    max-width: 288px;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 16px;
+
   }
 }
