--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -11,3 +11,10 @@
     margin: 0;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .place__website {
+    max-width: 288px;
+    margin: 0 16px;
+  }
+}
