--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -22,3 +22,12 @@
     column-gap: 28px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .place {
+    column-gap: 28px;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+
+  }
+}
