--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -15,3 +15,10 @@
     max-width: 984px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 64px 0 0;
+    max-width: 320px;
+  }
+}
