--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,10 +1,10 @@
-.place__website__link {
+.place__link {
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
   color: #fff;
 }
 
-.place__website__link:hover {
+.place__link:hover {
   opacity: .8;
 }
