--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,4 @@
-.place__website__url-heading {
+.place__url-heading {
   color: #AAA;
   font-weight: normal;
   font-size: 12px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .place__website__url-heading {
+  .place__url-heading {
     font-weight: normal;
     font-size: 12px;
     line-height: 12px;
