--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,14 +1,20 @@
 .lead__title {
-  font-size: 6rem;
+  font-size: 96px;
   line-height: 100px;
   text-align: center;
   font-weight: 900;
   margin: 0 132px;
+  max-width: 720px;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__title {
     margin: 0 104px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .lead__title {
+    font-size: 70px;
   }
 }
 
@@ -17,6 +23,26 @@
     margin: 0 24px;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .lead__title {
+    font-size: 70px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .lead__title {
+    font-size: 60px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .lead__title {
+    font-size: 40px;
+  }
+}
+
+
 
 @media screen and (max-width: 320px) {
   .lead__title {
