--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,21 +1,19 @@
 .photo-grid {
   margin: 92px 48px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 284px);
+  grid-template-columns: repeat(auto-fill, minmax(284px,1fr));
   gap: 16px;
 }
 
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 300px);
     gap: 14px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 352px);
     gap: 16px;
     margin: 88px 24px 0;
   }
@@ -23,7 +21,6 @@
 
 @media screen and (max-width: 320px) {
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 288px);
     gap: 12px;
     margin: 64px 16px 0;
   }
