--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .place__image {
+    max-width: 300px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .place__image {
     max-width: 320px;
