--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,9 +9,20 @@
   margin-bottom: 26px;
 }
 
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+
 @media screen and (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .place__paragraph {
+    font-size: 10px;
   }
 }
 
