--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -23,6 +23,14 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .place__title {
+    max-width: 300px;
+
+  }
+}
+
+
 @media screen and (max-width: 320px) {
   .place__title {
     max-width: 288px;
